# cactus-gemma4

./: .gitattributes  .gitignore  .gitmodules  App.tsx  README.md  app.json  eas.json  metro.config.js  package.json  tsconfig.json
modules/cactus-engine/: expo-module.config.json  index.ts
modules/cactus-engine/android/: build.gradle
modules/cactus-engine/android/src/main/cpp/: CMakeLists.txt  cactus_bridge.cpp
modules/cactus-engine/android/src/main/java/com/cactus/: CactusCallbacks.kt  CactusJNI.kt
modules/cactus-engine/android/src/main/java/com/cactusgemma/: CactusEngineModule.kt
modules/cactus-engine/ios/: CactusBridge.h  CactusEngine.podspec  CactusEngineModule.swift  ZipExtractor.swift  cactus_engine.h  module.modulemap
modules/cactus-engine/src/: CactusEngineModule.ts
patches/: metro-runtime+0.83.3.patch
src/components/: ActionButton.tsx  ProcessingGlow.tsx  ResponseOverlay.tsx
src/hooks/: useAudioRecorder.ts  useCactusModel.ts  useConversation.ts  useLiveCameraConversation.ts
src/screens/: CameraScreen.tsx  ChatScreen.tsx  DownloadScreen.tsx  LiveCameraScreen.tsx
src/utils/: colors.ts  types.ts
